@@ -6,6 +6,9 @@ ChangeLog
 
 GIT HEAD
 
+- Maximum pitch-bend range has been expanded to 0..400%,
+  allegedly to support some PME driven instruments (as
+  proposed by sacarlson, to synthv1). (EXPERIMENTAL)
 - Make man page compression reproducible (after request
   by Jelle van der Waa, thanks).
 - Fixed crash when showing the tooltip of a negative note
